feat(core): add fanout health check (#3198)
